--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nayan-server",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Simple create api(Mohammad Nayan)",
   "main": "src/index.js",
   "scripts": {
@@ -33,6 +33,8 @@
     "imagine",
     "text2img",
     "generate img",
+    "text to voice",
+    "text2voice",
     "nayan"
   ],
   "author": "NAYAN",
