--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nayan-server",
-  "version": "2.3.3",
+  "version": "2.3.4",
   "description": "Simple create api(Mohammad Nayan)",
   "main": "src/index.js",
   "scripts": {
@@ -17,6 +17,8 @@
     "img2text",
     "textpro",
     "photoxy",
+    "ephoto",
+    "ephoto360",
     "ip",
     "ip2lucation",
     "removebg",
