--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nayan-server",
-  "version": "2.3.8",
+  "version": "2.3.9",
   "description": "Simple create api(Mohammad Nayan)",
   "main": "src/index.js",
   "scripts": {
@@ -38,6 +38,8 @@
     "text to voice",
     "text2voice",
     "faceswap",
+    "news",
+    "bdnews",
     "nayan"
   ],
   "author": "NAYAN",
@@ -52,6 +54,8 @@
     "cookie": "^0.6.0",
     "form-data": "^4.0.0",
     "axios": "^1.6.5",
+    "jsdom": "^24.1.0",
+    "request": "^2.88.2",
     "nayan-media-downloader": ""
   }
 }
